--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -49,15 +49,21 @@ nav {
 .nav-button {
   margin-bottom: 0.4em;
   border: none;
-  font-size: 2em;
+  font-size: 1.5em;
   background-color: transparent;
 }
 .nav-button:hover {
   margin-bottom: 0.4em;
   border: none;
-  font-size: 2em;
   box-shadow: 0px 0px 20px 15px papayawhip ;
   background-color: papayawhip;
+}
+
+@media only screen and (max-width: 500px) {
+.nav-button {
+  font-size: 1.2em;
+}
+
 }
 
 /* Nav arrow icon custom look*/
